--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -16,10 +16,6 @@ btn {
     background-color: red;
 }
 
-dropbtn {
-    position: relative;
-    position: absolute;
-}
 .container{
     position: absolute;
     margin: auto;
@@ -89,8 +85,8 @@ img {
 
 body{
     margin: 0;
-    padding: o;
-    background:#444;
+    padding: 0;
+    background:grey;
     
 }
 /*This is the list,menu styling*/
@@ -140,11 +136,6 @@ a{
     color: #333;
 }
 
-.sidemenu {
-    background: purple;
-    max-width: 200px;
-}
-
 nav a {
     display: block;
     color: grey;
@@ -163,9 +154,9 @@ nav{
     padding: 15px 30px;
 }
 
-.active {
-    background: purple;
-    border-right: 5px solid green;
+.topnav{
+    background:none; 
+    border-right: 5px solid;
     padding: 15px 15px 25px;
 
 }
@@ -186,4 +177,19 @@ nav{
  }
  td, th{
      padding: 15px;
+ }
+
+ .page content{
+     text-align: center;
+     padding: 35px;
+
+ }
+
+ .landing-page{
+     padding: 100px;
+     margin: 35px;
+ }
+
+ h1 index-title{
+     text-align: center;
  }
